Rename `test` module to `foo` and update its export and import paths.

--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson4.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson4.html
@@ -678,6 +678,28 @@
                 添付ファイルを案件フォルダに自動保存。Geminiがファイルを分類し、
                 週次で資料一覧レポートを自動送信します。
             </p>
+
+            <!-- Before/After: このレッスンで何が変わるか -->
+            <div class="comparison-grid" style="margin-top: 2.5rem;">
+                <div class="comparison-card before">
+                    <div class="comparison-header" style="color: var(--coral); margin-bottom: 1rem;">BEFORE：このレッスン前</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
+                        <li style="padding: 0.5rem 0;">資料探しに毎回30分かかる</li>
+                        <li style="padding: 0.5rem 0;">添付ファイルがメールに埋もれる</li>
+                        <li style="padding: 0.5rem 0;">どこに何があるか分からない</li>
+                        <li style="padding: 0.5rem 0;">資料管理は手作業で負担大</li>
+                    </ul>
+                </div>
+                <div class="comparison-card after">
+                    <div class="comparison-header" style="color: var(--green); margin-bottom: 1rem;">AFTER：このレッスン後</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
+                        <li style="padding: 0.5rem 0;">資料が即座に見つかる（95%削減）</li>
+                        <li style="padding: 0.5rem 0;">添付ファイルを案件別に自動保存</li>
+                        <li style="padding: 0.5rem 0;">AIが自動分類・整理</li>
+                        <li style="padding: 0.5rem 0;">週次で資料一覧が自動送信</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 
