--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson5.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson5.html
@@ -153,6 +153,40 @@
             line-height: 1.8;
         }
 
+        .comparison-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin: 2rem 0;
+        }
+
+        .comparison-card {
+            padding: 2rem;
+            background: var(--bg-card);
+            border: 1px solid var(--border-color);
+            border-radius: 16px;
+            transition: all 0.3s ease;
+        }
+
+        .comparison-card:hover {
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+            transform: translateY(-4px);
+        }
+
+        .comparison-card.before {
+            border-top: 4px solid #ef4444;
+        }
+
+        .comparison-card.after {
+            border-top: 4px solid #22c55e;
+        }
+
+        .comparison-header {
+            font-size: 0.75rem;
+            font-weight: 700;
+            letter-spacing: 0.05em;
+        }
+
         /* Sections */
         .section {
             max-width: 1200px;
@@ -803,6 +837,28 @@
                 営業キーワードを自動監視して高確度案件を即座に検知。
                 4つのエージェントを統合し、追客漏れゼロの営業フローを完成させます。
             </p>
+
+            <!-- Before/After: このレッスンで何が変わるか -->
+            <div class="comparison-grid" style="margin-top: 2.5rem;">
+                <div class="comparison-card before">
+                    <div class="comparison-header" style="color: #ef4444; margin-bottom: 1rem;">BEFORE：このレッスン前</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
+                        <li style="padding: 0.5rem 0;">確度の高い案件を見落とす</li>
+                        <li style="padding: 0.5rem 0;">4つのエージェントがバラバラ</li>
+                        <li style="padding: 0.5rem 0;">キーワード監視は手動</li>
+                        <li style="padding: 0.5rem 0;">営業フローが属人的</li>
+                    </ul>
+                </div>
+                <div class="comparison-card after">
+                    <div class="comparison-header" style="color: #22c55e; margin-bottom: 1rem;">AFTER：このレッスン後</div>
+                    <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
+                        <li style="padding: 0.5rem 0;">確度高案件を自動検知・優先通知</li>
+                        <li style="padding: 0.5rem 0;">4つのエージェントが統合運用</li>
+                        <li style="padding: 0.5rem 0;">キーワード監視が完全自動化</li>
+                        <li style="padding: 0.5rem 0;">年間250時間の業務削減を実現</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
