--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson3.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson3.html
@@ -713,7 +713,7 @@
             <!-- Before/After: このレッスンで何が変わるか -->
             <div class="comparison-grid" style="margin-top: 2.5rem;">
                 <div class="comparison-card before">
-                    <div class="comparison-header" style="color: var(--coral); margin-bottom: 1rem;">BEFORE：このレッスン前</div>
+                    <div class="comparison-header" style="color: var(--coral); margin-bottom: 1rem;">BEFORE：受講前</div>
                     <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
                         <li style="padding: 0.5rem 0;">要対応メールが受信トレイに埋もれる</li>
                         <li style="padding: 0.5rem 0;">追客タイミングを逃して失注</li>
@@ -722,7 +722,7 @@
                     </ul>
                 </div>
                 <div class="comparison-card after">
-                    <div class="comparison-header" style="color: var(--green); margin-bottom: 1rem;">AFTER：このレッスン後</div>
+                    <div class="comparison-header" style="color: var(--green); margin-bottom: 1rem;">AFTER：受講後</div>
                     <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
                         <li style="padding: 0.5rem 0;">要対応メールに自動でラベル付与</li>
                         <li style="padding: 0.5rem 0;">受信時にリアルタイムで通知</li>
