--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson4.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson4.html
@@ -682,7 +682,7 @@
             <!-- Before/After: このレッスンで何が変わるか -->
             <div class="comparison-grid" style="margin-top: 2.5rem;">
                 <div class="comparison-card before">
-                    <div class="comparison-header" style="color: var(--coral); margin-bottom: 1rem;">BEFORE：このレッスン前</div>
+                    <div class="comparison-header" style="color: var(--coral); margin-bottom: 1rem;">BEFORE：受講前</div>
                     <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
                         <li style="padding: 0.5rem 0;">資料探しに毎回30分かかる</li>
                         <li style="padding: 0.5rem 0;">添付ファイルがメールに埋もれる</li>
@@ -691,7 +691,7 @@
                     </ul>
                 </div>
                 <div class="comparison-card after">
-                    <div class="comparison-header" style="color: var(--green); margin-bottom: 1rem;">AFTER：このレッスン後</div>
+                    <div class="comparison-header" style="color: var(--green); margin-bottom: 1rem;">AFTER：受講後</div>
                     <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
                         <li style="padding: 0.5rem 0;">資料が即座に見つかる（95%削減）</li>
                         <li style="padding: 0.5rem 0;">添付ファイルを案件別に自動保存</li>
