--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson5.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson5.html
@@ -841,7 +841,7 @@
             <!-- Before/After: このレッスンで何が変わるか -->
             <div class="comparison-grid" style="margin-top: 2.5rem;">
                 <div class="comparison-card before">
-                    <div class="comparison-header" style="color: #ef4444; margin-bottom: 1rem;">BEFORE：このレッスン前</div>
+                    <div class="comparison-header" style="color: #ef4444; margin-bottom: 1rem;">BEFORE：受講前</div>
                     <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
                         <li style="padding: 0.5rem 0;">確度の高い案件を見落とす</li>
                         <li style="padding: 0.5rem 0;">4つのエージェントがバラバラ</li>
@@ -850,7 +850,7 @@
                     </ul>
                 </div>
                 <div class="comparison-card after">
-                    <div class="comparison-header" style="color: #22c55e; margin-bottom: 1rem;">AFTER：このレッスン後</div>
+                    <div class="comparison-header" style="color: #22c55e; margin-bottom: 1rem;">AFTER：受講後</div>
                     <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
                         <li style="padding: 0.5rem 0;">確度高案件を自動検知・優先通知</li>
                         <li style="padding: 0.5rem 0;">4つのエージェントが統合運用</li>
