--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson5.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson5.html
@@ -29,6 +29,9 @@
             --success: #10b981;
             --warning: #f59e0b;
             --error: #ef4444;
+            --coral: #ef4444;
+            --green: #22c55e;
+            --bg-card: #ffffff;
             --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
             --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
             --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -163,7 +166,7 @@
         .comparison-card {
             padding: 2rem;
             background: var(--bg-card);
-            border: 1px solid var(--border-color);
+            border: 1px solid var(--border-light);
             border-radius: 16px;
             transition: all 0.3s ease;
         }
@@ -174,11 +177,11 @@
         }
 
         .comparison-card.before {
-            border-top: 4px solid #ef4444;
+            border-top: 4px solid var(--coral);
         }
 
         .comparison-card.after {
-            border-top: 4px solid #22c55e;
+            border-top: 4px solid var(--green);
         }
 
         .comparison-header {
@@ -841,7 +844,7 @@
             <!-- Before/After: このレッスンで何が変わるか -->
             <div class="comparison-grid" style="margin-top: 2.5rem;">
                 <div class="comparison-card before">
-                    <div class="comparison-header" style="color: #ef4444; margin-bottom: 1rem;">BEFORE：受講前</div>
+                    <div class="comparison-header" style="color: var(--coral); margin-bottom: 1rem;">BEFORE：受講前</div>
                     <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
                         <li style="padding: 0.5rem 0;">確度の高い案件を見落とす</li>
                         <li style="padding: 0.5rem 0;">4つのエージェントがバラバラ</li>
@@ -850,7 +853,7 @@
                     </ul>
                 </div>
                 <div class="comparison-card after">
-                    <div class="comparison-header" style="color: #22c55e; margin-bottom: 1rem;">AFTER：受講後</div>
+                    <div class="comparison-header" style="color: var(--green); margin-bottom: 1rem;">AFTER：受講後</div>
                     <ul style="list-style: none; font-size: 0.9375rem; color: var(--text-secondary);">
                         <li style="padding: 0.5rem 0;">確度高案件を自動検知・優先通知</li>
                         <li style="padding: 0.5rem 0;">4つのエージェントが統合運用</li>
